# snapgene2opencloning

./: .gitignore  LICENSE  README.md  convert.py  convert_all.sh  pyproject.toml  todo.md
data/: circularize_then_linearize_with_enzyme.dna  circularize_then_linearize_without_enzyme.dna  destroy_restriction_site.dna  golden_gate.dna  import_addgene.dna  linear_ligation2_overhangs.dna  linear_ligation_overhangs2.dna  nebuilder_restricting_template_multi_cut.dna  origin_spanning_features.dna  restriction_then_ligation.dna  rotate_restrict_rotate.dna
ignore/: blunt_linear_ligation.dna.json  blunt_linear_ligation.json  circular_ligation_3fragments.dna.json  circular_ligation_3fragments.json  circularize.dna.json  circularize.json  circularize_only.json  circularize_then_linearize_with_enzyme.dna.json  circularize_then_linearize_with_enzyme.json  circularize_then_linearize_without_enzyme.dna.json  circularize_then_linearize_without_enzyme.json  delete_restriction_fragment_compatible_overhangs.dna.json  delete_restriction_fragment_compatible_overhangs.json  delete_restriction_fragment_without_compatible_overhangs.dna.json  delete_restriction_fragment_without_compatible_overhangs.json  destroy_restriction_site.dna.json  destroy_restriction_site.json  expression-attP1_1-attP2_1.dna.json  expression-attP1_1-attP2_1.json  final_plasmid.dna.json  final_plasmid.json  gateway_single_BP_and_LR_at_once.dna.json  gateway_single_BP_and_LR_at_once.json  gc_cloning_including_overhangs.dna.json  gc_cloning_including_overhangs.json  gc_cloning_overhangs_after.dna.json  gibson_assembly.json  (+64 more)
(+47 files in other folders)
