[project]
name = "snapgene2opencloning"
version = "0.1.0"
description = ""
authors = [
    {name = "Manuel Lera-Ramirez",email = "manulera14@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "sgffp (>=0.15.2,<0.16.0)",
    "pydna @ git+https://github.com/pydna-group/pydna@e7ca502407f0381dcd33a9f68d0f0bd747362d86"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
